So currently I corrected overflow problem in contact and confidential agreement part . it was in style.module.css bodyContainer className. I had to add overflow hidden in the above mentioned class and also inside bodyContainerChange.

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   flex-direction: column;
   background-color: #040404;
   overflow-x: hidden;
+  
 }
 .containerFirst {
   width:100vw;
@@ -23,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #040404;
-  overflow-x: hidden;
+  
 }
 .containerChange {
   width:100vw;
@@ -31,7 +32,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #f4f4f4;
-  overflow-x: hidden;
+  
 }
 .container {
   display: flex;
