--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -290,7 +290,7 @@
 /* body */
 .bodyContainer {
     width:100%;
-    min-height:calc(100vh - 100px);
+    height:calc(100vh - 100px);
     /* background-color: #0e0e0e; */
     position: relative;
     z-index: 1;
@@ -298,7 +298,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .bodyContainerChange {
     width:100%;
@@ -311,7 +311,7 @@
     color:black;
     position: relative;
     z-index: 1;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .moonRegular, .sunRegular {
     top:15px;
@@ -329,11 +329,6 @@
     filter: invert(96%) sepia(30%) saturate(2636%) hue-rotate(355deg) brightness(105%) contrast(105%);
 }
 
-
-/* carousel */
-
-
-/* carousel */
 
 
 /* body */
